<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Opium Makassar</string>
    <string name="main_name">OPIUM MAKASSAR</string>
    <string name="about">About Apps</string>
    <string name="imgdesc">imgdesc</string>
    <string name="drawer_open">Buka</string>
    <string name="drawer_close">Tutup</string>
    
    
    <!-- Title -->
    <string-array name="titles">
        <item>  ENTERTAINMENT</item>
        <item>\tMUSIK</item>
        <item>\tMOVIE</item>
        <item>\tSPORT</item>
        <item>  ART</item>
        <item>\tPHOTO</item>
        <item>\tDESIGN</item>
        <item>\tVIDEO</item>
        <item>  LIFE STYLE</item>
        <item>\tFASHION</item>
        <item>\tHANGOUT</item>
        <item>\tPLACE</item>
        <item>\tGADGET</item>
        <item>  OPIUMBABES</item>
        <item>  SCHOOLISM</item>
        <item>\tSCHOOL</item>
        <item>\tNEWS</item>
        <item>\tPROFILE</item>
        <item>  MORE</item>
        <item>\tABOUT</item>
        <item>\tCONTACT</item> 
    </string-array>
    <!-- Page Url -->
    <string-array name="pageurl">
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
        <item>http://www.opium-makassar.com/progress/mobile</item>
    </string-array>
    
    <!-- Sosmed -->
  
        <string name="facebook">Facebook</string>
        <string name="twitter">Twitter</string>
        <string name="issuu">Issuu</string>
        <string name="instagram">Instagram</string>
        
        <string name="opium_fb">Opium on Facebook</string>
        <string name="opium_twit">Opium on Twitter</string>
        <string name="opium_issuu">Opium on Issuu</string>
        <string name="opium_insta">Opium on Instagram</string>
        
        <string name="url_facebook">https://m.facebook.com/opiummagazine.makassar</string>
        <string name="url_instagram">http://instagram.com/opiumagazine</string>
        <string name="url_issuu">http://issuu.com/opiumagazine</string>
        <string name="url_twitter">https://mobile.twitter.com/opiumagazine</string>
        
        
    <!-- Icons don't using for now-->
 <!--     <array name="icons">
        <item>@drawable/tutorrialsbuzz</item>
        <item>@drawable/facebook</item>
        <item>@drawable/facebook</item>
    </array>
 -->

</resources>
