<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sendmedia.opiummks.MainActivity" >

    <item
        android:id="@+id/facebook"
        android:orderInCategory="100"
        android:title="@string/facebook"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/insta"
        android:orderInCategory="200"
        android:title="@string/instagram"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/issuu"
        android:orderInCategory="300"
        android:title="@string/issuu"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/twitter"
        android:orderInCategory="400"
        android:title="@string/twitter"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/about"
        android:orderInCategory="500"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
